--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -1,6 +1,6 @@
 ---
 name: molecule tests
-on:  
+on:
   push:
   pull_request:
     branches:
@@ -11,6 +11,14 @@ jobs:
     strategy:
       fail-fast: false
       max-parallel: 4
+      matrix:
+        os:
+          - image: quay.io/centos/centos:stream8
+            pre_build: true
+          - image: debian:10
+            pre_build: false
+          - image: debian:11
+            pre_build: false
     steps:
       - uses: actions/checkout@v2
       - name: python
@@ -24,3 +32,5 @@ jobs:
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
+          MOLECULE_IMAGE: ${{ matrix.os.image }}
+          MOLECULE_PRE_BUILD_IMAGE: ${{ matrix.os.pre_build }}
