--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,7 +8,7 @@ youtrack_data_dir: "{{ youtrack_home_dir }}/teamsysdata"
 youtrack_conf_dir: "{{ youtrack_data_dir }}/conf"
 youtrack_releases_dir: "{{ youtrack_home_dir }}/releases"
 youtrack_xmx_megabytes: 1024
-youtrack_restore_backup: false
+youtrack_restore_backup: false # use this option carefully, youtrack data directory will be deleted
 youtrack_restore_backup_file: "/tmp/youtrack.tar.gz"
 youtrack_startup_options: ""
 # YouTrack JVM options
