--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -10,21 +10,12 @@ lint: |
   flake8
 platforms:
   - name: molecule
+    image: ${MOLECULE_IMAGE:-debian:10}
     hostname: molecule
-    image: ${MOLECULE_IMAGE:-quay.io/centos/centos:stream8}
-    privileged: false
-    pre_build_image: ${MOLECULE_PRE_BUILD_IMAGE:-true}
+    command: /sbin/init
+    systemd: true
     exposed_ports:
       - 8080/tcp
-    published_ports:
-      - 0.0.0.0:8080:8080/tcp
-    # systemd support: https://molecule.readthedocs.io/en/latest/examples.html#systemd-container
-    command: /sbin/init
-    tmpfs:
-      - /run
-      - /tmp
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
 provisioner:
   name: ansible
 verifier:
