--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -38,21 +38,35 @@
     mode: 0644
   notify: restart youtrack service
 
-- name: download youtrack jar file
+- name: download youtrack zip file
   ansible.builtin.get_url:
-    url: "https://download.jetbrains.com/charisma/youtrack-{{ youtrack_version }}.jar"
-    dest: "{{ youtrack_releases_dir }}/youtrack-{{ youtrack_version }}.jar"
-    checksum: "sha256:https://download.jetbrains.com/charisma/youtrack-{{ youtrack_version }}.jar.sha256"
+    url: "https://download.jetbrains.com/charisma/youtrack-{{ youtrack_version }}.zip"
+    dest: "{{ youtrack_releases_dir }}/youtrack-{{ youtrack_version }}.zip"
+#    checksum: "sha256:https://download.jetbrains.com/charisma/youtrack-{{ youtrack_version }}.zip.sha256"
     owner: "{{ youtrack_user }}"
     group: "{{ youtrack_group }}"
     mode: 0640
+
+- name: Install Unzip
+  apt:
+    name: unzip
+    update_cache: yes
+
+- name: Unarchive zip file
+  ansible.builtin.unarchive:
+    src: "{{ youtrack_releases_dir }}/youtrack-{{ youtrack_version }}.zip"
+    dest: "{{ youtrack_releases_dir }}/"
+    remote_src: yes
+
+- name: Mkdir bin
+  shell: mkdir -p /home/youtrack/bin
 
 - name: create/update symbolic link
   ansible.builtin.file:
     state: link
     follow: no
-    src: "{{ youtrack_releases_dir }}/youtrack-{{ youtrack_version }}.jar"
-    dest: "{{ youtrack_home_dir }}/youtrack.jar"
+    src: "{{ youtrack_releases_dir }}/youtrack-{{ youtrack_version }}/bin/youtrack.sh"
+    dest: "{{ youtrack_home_dir }}/bin/youtrack.sh"
     owner: "{{ youtrack_user }}"
     group: "{{ youtrack_group }}"
   notify: restart youtrack service
@@ -74,3 +88,11 @@
 - name: restore backup
   ansible.builtin.include_tasks: backup.yml
   when: youtrack_restore_backup|bool
+
+- name: Read token
+  shell: cat /home/youtrack/releases/youtrack-{{ youtrack_version }}/conf/internal/services/configurationWizard/wizard_token.txt
+  register: token
+
+- name: Show token
+  debug:
+    var: token.stdout
