chore: run tests for any opened pull request

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -3,8 +3,7 @@ name: molecule tests
 on:
   push:
   pull_request:
-    branches:
-      - master
+    types: [opened, reopened]
 jobs:
   molecule:
     runs-on: ubuntu-latest
