--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -2,8 +2,13 @@
 name: molecule tests
 on:
   push:
+    branches:
+      - 'main'
   pull_request:
-    types: [opened, reopened]
+    types:
+      - opened
+      - reopened
+  workflow_dispatch:
 jobs:
   molecule:
     runs-on: ubuntu-latest
@@ -12,11 +17,15 @@ jobs:
       max-parallel: 4
       matrix:
         os:
-          - rockylinux:9
           - rockylinux:8
-          - debian:10
+          - rockylinux:9
           - debian:11
+          - debian:12
     steps:
+      # github ubuntu images uses podman 3.4.4 which is incompatible with molecule-plugins podman driver (podman 4.x is required)
+      # next two actions are just workaround and can be removed when github podman will be updated
+      - uses: gacts/install-podman@v1
+      - run: podman version
       - uses: actions/checkout@v3
       - name: python
         uses: actions/setup-python@v4
@@ -29,4 +38,4 @@ jobs:
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
-          MOLECULE_IMAGE: ${{ matrix.os.image }}
+          MOLECULE_IMAGE: ${{ matrix.os }}
