--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,14 +8,14 @@ galaxy_info:
 
   # https://galaxy.ansible.com/api/v1/platforms/
   platforms:
-   - name: EL
-     versions:
-       - "9"
-       - "8"
-   - name: Debian
-     versions:
-       - buster   # 10
-       - bullseye # 11
+  - name: EL
+    versions:
+      - "8"
+      - "9"
+  - name: Debian
+    versions:
+      - bullseye  # 11
+      - bookworm  # 12
 
   galaxy_tags:
     - youtrack
