--- a/tasks/backup.yml
+++ b/tasks/backup.yml
@@ -1,15 +1,15 @@
 ---
-- name: stop service
+- name: backup | stop service
   ansible.builtin.systemd:
     name: youtrack
     state: stopped
 
-- name: cleanup existing data
+- name: backup | cleanup existing data
   ansible.builtin.file:
     path: "{{ youtrack_data_dir }}"
     state: absent
 
-- name: create data directory
+- name: backup | create data directory
   ansible.builtin.file:
     state: directory
     path: "{{ youtrack_data_dir }}"
@@ -17,7 +17,7 @@
     group: "{{ youtrack_group }}"
     mode: 0750
 
-- name: restore youtrack backup from given location
+- name: backup | restore youtrack backup from given location
   ansible.builtin.unarchive:
     src: "{{ youtrack_restore_backup_file }}"
     dest: "{{ youtrack_data_dir }}"
@@ -25,14 +25,14 @@
     group: "{{ youtrack_group }}"
     remote_src: yes
 
-- name: fix permissions (unarchive doesn't do it properly)
+- name: backup | fix permissions (unarchive doesn't do it properly)
   ansible.builtin.file:
     path: "{{ youtrack_data_dir }}"
     owner: "{{ youtrack_user }}"
     group: "{{ youtrack_group }}"
     recurse: yes
 
-- name: start service
+- name: backup | start service
   ansible.builtin.systemd:
     name: youtrack
     state: started
