Add a youtrack_base_dir option This allows users to install YouTrack to locations other than the home directory without issue. Without it, things like the youtrack service are hardcoded to treat `{{youtrack_home_dir}}/youtrack` as the location of the latest version of YouTrack.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,7 +20,7 @@
     state: link
     follow: no
     src: "{{ youtrack_releases_dir }}/youtrack-{{ youtrack_version }}"
-    dest: "{{ youtrack_home_dir }}/youtrack"
+    dest: "{{ youtrack_base_dir }}"
     owner: "{{ youtrack_user }}"
     group: "{{ youtrack_group }}"
   notify: restart youtrack service
