--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,7 +1,7 @@
 ---
 - name: configure | check for current link
   ansible.builtin.stat:
-    path: "{{ youtrack_home_dir }}/youtrack"
+    path: "{{ youtrack_base_dir }}"
   register: __link
 
 - name: configure | extract current version
